# HYMIND

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  HYMIND_agent_plan.md  MVP_summary.md  README.md  project_brief.md  project_deliverables.md  project_planning.md  pyproject.toml  requirements.txt  start_hymind_api.py
config/: report_template.md
data/: seen_urls.db
docs/: architecture.md  decision_log.md  definition_of_done.md  project_phases.md  project_state.md  stories.md  task_board.md
docs/architecture/: api_integrations.md  phase_2_research_foundation.md  research_pipeline.md  system_architecture.md  workflow.md
docs/operations/: definition_of_done.md  demo_runbook.md  limitations.md  n8n_workflow.md  progress_log.md  reporting_standards.md  task_board.md  test_results_phase_1.md  workflow_documentation.md
docs/planning/: stories.md
docs/roadmap/: project_phases.md  sprint_plan.md
memory/: failure_patterns.md  handover.md
n8n/: Global Error Handler.json  HYMIND.json
outputs/: HYMIND_Executive_Presentation.pptx
scripts/: build_presentation.py  check_pptx.py  run_api.py
skills/: README.md  hydrogen_research_skill.md  report_generation_skill.md  skill_agent_memory.md  skill_agile_execution.md  skill_api_integration.md  skill_langgraph_workflow.md  skill_project_documentation.md  skill_rag_pipeline.md
src/: main.py
tests/: conftest.py  test_deduplication.py  test_missing_api_keys.py  test_news_api_collector.py  test_rag.py  test_reliability.py  test_report_generator.py  test_schemas.py  test_validator.py  test_web_crawler.py
(+81 files in other folders)
