[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hymind"
version = "0.1.0"
description = "Hydrogen Market Intelligence & Data platform"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "langchain",
    "langgraph",
    "python-dotenv",
    "requests",
    "feedparser",
    "beautifulsoup4",
    "lxml",
    "markdown",
    "pydantic",
    "tenacity",
    "rich",
    "pinecone",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["hymind*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

